# bubble

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  bubble.md  pyproject.toml
.claude/: settings.json
src/bubble/: __init__.py  _shared.py  archive.py  chain.py  cluster.py  config.py  contradict.py  db.py  decomposer.py  embed.py  ingest.py  main.py  promote.py  rerank.py  retrieve.py
src/bubble/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  openai.py  prompts.py
