[project]
name = "bubble"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.86.0",
    "falkordb>=1.6.0",
    "httpx>=0.28.0",
    "numpy>=2.4.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0"
]
[tool.ruff]
line-length = 230